--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,33 +1,10 @@
-#server port
-server.port=8080
 
 #datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.name=kenhome
-spring.datasource.url=jdbc\:mysql\://120.79.35.34\:3306/test?useUnicode\=true&characterEncoding\=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://120.79.35.34:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=chenmeikai2018
-#druid
-spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.initialSize=5
-spring.datasource.minIdle=5
-spring.datasource.maxActive=20
-spring.datasource.maxWait=60000
-spring.datasource.timeBetweenEvictionRunsMillis=60000
-spring.datasource.minEvictableIdleTimeMillis=300000
-spring.datasource.validationQuery=SELECT 1 FROM DUAL
-spring.datasource.testWhileIdle=true
-spring.datasource.testOnBorrow=false
-spring.datasource.testOnReturn=false
-spring.datasource.poolPreparedStatements=true
-spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-spring.datasource.filters=stat,wall,log4j
-spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-spring.datasource.useGlobalDataSourceStat=true
-
-#mybatis
-mybatis.mapper-locations=classpath:mapping/*.xml
-mybatis.type-aliases-package=com.example.model
 
 #freemarker
 spring.freemarker.allow-request-override=false
@@ -38,3 +15,13 @@ spring.freemarker.content-type=text/html
 spring.freemarker.expose-request-attributes=false
 spring.freemarker.expose-session-attributes=false
 spring.freemarker.expose-spring-macro-helpers=false
+
+#Gen
+#\u8981\u622a\u53bb\u7684table\u524d\u7f00
+cut.table.prefix=t_
+#\u6a21\u677f\u8def\u5f84
+gen.ftl.path=/static/ftl/
+#\u5b9e\u4f53\u7c7bpackage\u7684\u8def\u5f84
+gen.entity.package.path=www.chenmeikai.com
+#\u5b9e\u4f53\u7c7b\u751f\u6210\u6587\u4ef6\u8def\u5f84
+gen.entity.target.path =gen/model/
