--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,10 @@ cut.table.prefix=t_
 #\u6a21\u677f\u8def\u5f84
 gen.ftl.path=/static/ftl/
 #\u5b9e\u4f53\u7c7bpackage\u7684\u8def\u5f84
-gen.entity.package.path=www.chenmeikai.com
+gen.model.package.path=www.chenmeikai.com.model
 #\u5b9e\u4f53\u7c7b\u751f\u6210\u6587\u4ef6\u8def\u5f84
-gen.entity.target.path =gen/model/
+gen.model.target.path=gen/model/
+#mapper\u6587\u4ef6pacakage\u7684\u8def\u5f84
+gen.mapper.package.path=www.chenmeikai.com.mapper
+#mapper\u751f\u6210\u6587\u4ef6\u8def\u5f84
+gen.mapper.target.path=gen/mapper/
