--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ gen.model.target.path=gen/model/
 gen.mapper.package.path=www.chenmeikai.com.mapper
 #mapper\u751f\u6210\u6587\u4ef6\u8def\u5f84
 gen.mapper.target.path=gen/mapper/
+#\u751f\u6210mapper xml\u6587\u4ef6\u8def\u5f84
+gen.xml.target.path=gen/xml/
