--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,11 +23,19 @@ cut.table.prefix=t_
 gen.ftl.path=/static/ftl/
 #\u5b9e\u4f53\u7c7bpackage\u7684\u8def\u5f84
 gen.model.package.path=www.chenmeikai.com.model
-#\u5b9e\u4f53\u7c7b\u751f\u6210\u6587\u4ef6\u8def\u5f84
-gen.model.target.path=gen/model/
 #mapper\u6587\u4ef6pacakage\u7684\u8def\u5f84
 gen.mapper.package.path=www.chenmeikai.com.mapper
+#service\u6587\u4ef6pacakage\u7684\u8def\u5f84
+gen.service.package.path=www.chenmeikai.com.service
+#serviceImpl\u6587\u4ef6pacakage\u7684\u8def\u5f84
+gen.serviceImpl.package.path=www.chenmeikai.com.service.Impl
+#\u5b9e\u4f53\u7c7b\u751f\u6210\u6587\u4ef6\u8def\u5f84
+gen.model.target.path=gen/model/
 #mapper\u751f\u6210\u6587\u4ef6\u8def\u5f84
 gen.mapper.target.path=gen/mapper/
 #\u751f\u6210mapper xml\u6587\u4ef6\u8def\u5f84
 gen.xml.target.path=gen/xml/
+#\u751f\u6210service\u6587\u4ef6\u8def\u5f84
+gen.service.target.path=gen/service/
+#\u751f\u6210serviceImpl\u6587\u4ef6\u8def\u5f84
+gen.serviceImpl.target.path=gen/service/Impl
