代码自动构建

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,9 @@ gen.mapper.package.path=www.chenmeikai.com.mapper
 #service\u6587\u4ef6pacakage\u7684\u8def\u5f84
 gen.service.package.path=www.chenmeikai.com.service
 #serviceImpl\u6587\u4ef6pacakage\u7684\u8def\u5f84
-gen.serviceImpl.package.path=www.chenmeikai.com.service.Impl
+gen.serviceImpl.package.path=www.chenmeikai.com.service.impl
+#controller\u6587\u4ef6pacakage\u7684\u8def\u5f84
+gen.controller.package.path=www.chenmeikai.com.controller
 #\u5b9e\u4f53\u7c7b\u751f\u6210\u6587\u4ef6\u8def\u5f84
 gen.model.target.path=gen/model/
 #mapper\u751f\u6210\u6587\u4ef6\u8def\u5f84
@@ -38,4 +40,6 @@ gen.xml.target.path=gen/xml/
 #\u751f\u6210service\u6587\u4ef6\u8def\u5f84
 gen.service.target.path=gen/service/
 #\u751f\u6210serviceImpl\u6587\u4ef6\u8def\u5f84
-gen.serviceImpl.target.path=gen/service/Impl
+gen.serviceImpl.target.path=gen/service/impl/
+#\u751f\u6210controller\u6587\u4ef6\u8def\u5f84
+gen.controller.target.path=gen/controller/
