--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #datasource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.name=kenhome
-spring.datasource.url=jdbc:mysql://120.79.35.34:3306/test?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://120.79.35.34:3306/huisheng?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=chenmeikai2018
 
@@ -22,15 +22,15 @@ cut.table.prefix=t_
 #\u6a21\u677f\u8def\u5f84
 gen.ftl.path=/static/ftl/
 #\u5b9e\u4f53\u7c7bpackage\u7684\u8def\u5f84
-gen.model.package.path=www.chenmeikai.com.model
+gen.model.package.path=com.huisheng.model
 #mapper\u6587\u4ef6pacakage\u7684\u8def\u5f84
-gen.mapper.package.path=www.chenmeikai.com.mapper
+gen.mapper.package.path=com.huisheng.mapper
 #service\u6587\u4ef6pacakage\u7684\u8def\u5f84
-gen.service.package.path=www.chenmeikai.com.service
+gen.service.package.path=com.huisheng.service
 #serviceImpl\u6587\u4ef6pacakage\u7684\u8def\u5f84
-gen.serviceImpl.package.path=www.chenmeikai.com.service.impl
+gen.serviceImpl.package.path=com.huisheng.service.impl
 #controller\u6587\u4ef6pacakage\u7684\u8def\u5f84
-gen.controller.package.path=www.chenmeikai.com.controller
+gen.controller.package.path=com.huisheng.controller
 #\u5b9e\u4f53\u7c7b\u751f\u6210\u6587\u4ef6\u8def\u5f84
 gen.model.target.path=gen/model/
 #mapper\u751f\u6210\u6587\u4ef6\u8def\u5f84
